<resources>
    <string name="app_name">MusicApp</string>
    <string name="recommand">人气推荐</string>
    <string name="album">专辑</string>
    <string name="songlist">歌单</string>
    <string name="musician">音乐人</string>
    <string name="title_activity_recommand">RecommandActivity</string>
    <string name="title_activity_playing">播放曲目</string>
    <string name="ldh_detail">演员、歌手，影视歌多栖发展的代表艺人之一。1981年因出演单元剧《江湖再见》而出道。获第2届香港电影金像奖最佳新演员，第16届中国电影华表奖优秀男演员。</string>
    <string name="ldh">刘德华</string>
    <string name="zgr">张国荣</string>
    <string name="zgr_detail">1956年9月12日出生于香港九龙，中国香港歌手、演员、音乐人。1977年正式出道。1983年以《风继续吹》成名。1984年演唱的《Monica》获十大中文金曲、十大劲歌金曲。</string>
    <string name="myf">梅艳芳</string>
    <string name="myf_detail">歌影双栖发展艺人。1982年获“第一届新秀歌唱大赛冠军”。1983年唱片《赤色梅艳芳》开始走红。1998年获得香港乐坛最高荣誉“金针奖”。</string>
    <string name="hjj">黄家驹</string>
    <string name="hjj_detail">中国男歌手、原创音乐人、Beyond的主唱。1983年以《大厦》在香港歌坛出道；同年Beyond正式组建。1990年凭借《光辉岁月》获得十大劲歌金曲最佳填词奖。</string>
    <string name="zjl">周杰伦</string>
    <string name="zjl_detail">1979年1月18日出生于台湾省新北市，中国台湾流行乐男歌手、音乐人、演员、导演、编剧、监制、商人。2000年，周杰伦被吴宗宪发掘并推出首张专辑《Jay》。</string>
    <string name="album_1">专辑1</string>
    <string name="songer_4">歌手4</string>
    <string name="album_4">专辑4</string>
    <string name="songer_3">歌手3</string>
    <string name="album_3">专辑3</string>
    <string name="album_2">专辑2</string>
    <string name="songer_2">歌手2</string>
    <string name="songer_1">歌手1</string>
    <string name="song_1">歌曲1</string>
    <string name="song_2">歌曲2</string>
    <string name="song_3">歌曲3</string>
    <string name="song_4">歌曲4</string>
    <string name="song_5">歌曲5</string>
    <string name="song_6">歌曲6</string>
    <string name="playing">正在播放歌曲</string>
    <string name="music">歌曲</string>
    <string name="recommand_song_1">推荐歌曲1</string>
    <string name="recommand_song_2">推荐歌曲2</string>
    <string name="recommand_song_3">推荐歌曲3</string>
    <string name="recommand_song_4">推荐歌曲4</string>
    <string name="recommand_song_5">推荐歌曲5</string>
    <string name="recommand_song_6">推荐歌曲6</string>
    <string name="recommand_song_7">推荐歌曲7</string>
    <string name="songer_7">歌手7</string>
    <string name="songer_6">歌手6</string>
    <string name="songer_5">歌手5</string>
</resources>
